remove letter-spacing that is no longer necessary with new fonts

--- a/src/components/Button/Button.less
+++ b/src/components/Button/Button.less
@@ -20,7 +20,6 @@
 	font-size: @fontSize;
 	font-family: @fontFamily;
 	font-weight: @font-weight-medium;
-	letter-spacing: 0.05em;
 	padding: 0 @Button-size-padding;
 	outline: none;
 	color: @color-darkGray;
